--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -231,7 +231,7 @@ margin-left: 55%;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     transition: opacity 0.5s;
-    cursor: pointer;
+
     opacity: 0.7;
 }
 
@@ -248,7 +248,6 @@ margin-left: 55%;
     background-position: 50% 50%;
     transition: opacity 0.5s;
     opacity: 0.7;
-     cursor: pointer;
 }
 
 .img-hobby-2:hover {
@@ -264,7 +263,6 @@ margin-left: 55%;
     background-position: 50% 50%;
     transition: opacity 0.5s;
     opacity: 0.7;
-     cursor: pointer;
 }
 
 .img-hobby-3:hover {
@@ -280,7 +278,6 @@ margin-left: 55%;
     background-position: 50% 50%;
     transition: opacity 0.5s;
     opacity: 0.7;
-     cursor: pointer;
 }
 
 .img-hobby-4:hover {
@@ -295,8 +292,7 @@ margin-left: 55%;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     transition: opacity 0.5s;
-    opacity: 0.7;
-     cursor: pointer;
+    opacity: 0.7; 
 }
 
 .img-hobby-5:hover {
@@ -312,7 +308,6 @@ margin-left: 55%;
     background-position: 50% 50%;
     transition: opacity 0.5s;
     opacity: 0.7;
-     cursor: pointer;
 }
 
 .img-hobby-6:hover {
@@ -332,6 +327,15 @@ margin-left: 35%;
 #container-img-6 {
 margin-left: 55%; 
     margin-top: 5%;
+}
+
+#picture-link-1,
+#picture-link-2,
+#picture-link-3,
+#picture-link-4,
+#picture-link-5,
+#picture-link-6 {
+visibility: hidden;
 }
 
 
@@ -384,8 +388,21 @@ footer {
 }
 
 #arrow-left {
-    font-size: 30px; 
+    font-size: 50px; 
     cursor: pointer;
+    color: #333;
+    position: fixed;
+    left:16%;
+    top: 45%;
+}
+
+#arrow-right {
+    font-size: 50px; 
+    cursor: pointer;
+    color: #333;
+    position: fixed;
+    right:16%;
+    top: 45%;
 }
 
 /*---------------------------------FORM----------------------------*/
